Decreased image height and stopped border overlap

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,11 @@
 html
 {
-    width: 99.7%;
-    height: 99%;
+    width: 100%;
+    height: 100%;
     flex-shrink: 0;
     font-family: inter;
     
+    overflow-x: hidden;
     background: #2F2F2F;
 }
 
@@ -99,17 +100,21 @@ li a:hover
     --button-hover-color: #af0000;
 }
 
+.imageFix
+{
+    position: relative;
+    height: 45vh;
+    border: 4px solid black;
+    right: 0vw;
+}
+
 /*Although we talked about how to do this in class, I wanted to do some more advanced things with this overlay so I did a lot of googling to learn how to do some things (like the transform translate thing)*/
 .container 
 {
     position: relative;
-    width: 99.65%;
-    height: 800px;
+    width: 100%;
+    height: 100%;
     background: url("Images/PhotoCollage.png") center/cover no-repeat;
-    border-radius: 5px;
-    border: 4px solid black;
-    left: 0;
-    right: 10px;
 }
 
 /*Got most of this code from the code mode thing on Figma*/
